# website

./: .dockerignore  .gitignore  CNAME  Dockerfile  Gemfile  Justfile  README.md  _config.yml  about.md  blog.html  fix_rev.patch  flake.nix  index.html  index.md  publications.md
.github/workflows/: test.yml
_data/: navigation.yml  publications.yml
_includes/: footer.html  head.html  navigation.html
_layouts/: default.html  post.html
_posts/: 2024-08-17-welcome-to-jekyll.markdown  2024-08-20-tuto-gnn-jax.md  2024-09-02-tuto-gnn.md
assets/: flake.nix  index.md
assets/css/: code-highlight.css  home.css  main.css  navigation.css  styles.css  zenburn.css
assets/images/: Justfile
assets/images/posts/gnn-tuto/: illustration.excalidraw
delivery/: README.md  flake.nix  gleam.toml  manifest.toml
delivery/priv/: index.html
delivery/src/: delivery.gleam  website.gleam
delivery/src/app/: router.gleam  web.gleam
factory/: .gitignore  Justfile  README.md  flake.nix  hash_codes.c  main.c  meson.build  test-json-parser.c
factory/include/: convert.h  convert_tree_md.h  convert_tree_md_inline.h  hash.h  parse.h  tree.h  ts_utils.h  utils.h  write_html.h  writer.h
factory/include/parsers/: bibtex.h  markdown.h  markdown_inline.h  utils.h  yaml.h
factory/include/writers/: article_metadata.h  articles_index.h  body.h  body_main.h  head.h  header.h  html.h  utils.h
factory/src/: convert.c  convert_tree_md.c  convert_tree_md_inline.c  hash.c  hash_codes.c  main.c  parse.c  tree.c  ts_utils.c  utils.c  write_html.c  writer.c  yaml_parser.c
factory/src/parsers/: bibtex.c  markdown.c  markdown_inline.c  utils.c  yaml.c
factory/src/writers/: article_metadata.c  articles_index.c  body.c  body_main.c  head.c  header.c  html.c  utils.c
factory/tests/: test.c  test_body.c  test_body_main.c  test_convert.c  test_head.c  test_header.c  test_writer.c
factory/tests/body/: biblio.bib  biblio.html  biblio.md  blockquote.md  code_block.html  emph.md  heading.html  heading.md  html_block.html  html_block.md  img.html  img.md  latex.html  latex.md  link.html  link.md  list.html  page_info.html  page_info.md  paragraph.html  paragraph.md  table.html  table.md  thematic_break.html  thematic_break.md
factory/tests/body_main/: article_metadata.html  article_metadata.md  blockquote.html  code_block.html  code_block.md  emph.html  emph.md  header.html  img.html  latex.html  latex.md  link.html  list.html  paragraph.html
factory/tests/examples/: emph.html  emph.md  header.html  header.typ  link.html  link.md  par.md  paragraph.md
factory/tests/head/: commons.html  commons.md  css.html  css.md  script.html  script.md  title.html  title.md
factory/tests/header/: nav.html  nav.yaml
factory/tests/yaml/: title.yml
supply/: config.yaml  header.md  index.md  papers.md  posts.md
supply/hidden/: ubuntu.md
supply/paper-reviews/complexity-scaling-laws/: post.md
supply/phd-journal/: 2025-06-13.md  2025-06-22.md  2025-06-30.md  2025-07-07.md  2025-07-11.md  2025-07-21.md  2025-08-15.md  2025-08-25.md  2025-09-01.md  2025-09-09.md  2025-09-24.md  2025-10-12.md  2025-10-19.md  2025-10-26.md  2025-11-16.md  2025-11-26.md  2025-12-11.md  2025-20-12.md  2026-01-17.md  2026-02-07.md  2026-04-19.md  2026-04-27.md  2026-05-01.md  2026-05-27.md
supply/posts/2024-09-02_jax-gnn/: post.md
supply/posts/2024-09-02_tuto-gnn/: tuto-gnn.md
supply/posts/2025-07-07_nixos-deep-learning/: post.md
supply/posts/2nd-year/: bib.bib  post.md
supply/posts/associative-scan/: Justfile  example.py  flake.nix  illustrations.excalidraw  post.md  pyproject.toml
supply/posts/circular-tsp/: biblio.bib  post.md
supply/posts/jax-gnn/: illustration.excalidraw  post.md
supply/posts/nixos-deep-learning/: post.md
supply/recettes/cookies-sables/: post.md
supply/recettes/crumble-aux-pommes/: post.md
supply/recettes/madeleines-chocolat/: post.md
supply/recettes/mousse-au-chocolat/: post.md
supply/recettes/salade-pois-chiches/: post.md
supply/recettes/tarte-poireaux-lardons/: post.md
supply/scripts/: renderCode.js
supply/styles/: biblio.css  fonts.css  main.css  table.css
website/: .gitignore  global.yaml  index.md  main.css  papers.md  renderLatex.js
website/articles/: article_1.md  article_2.md
